--- a/index.html
+++ b/index.html
@@ -68,12 +68,15 @@
 
   <script>
     function destroyCringe() {
-      const text = document.getElementById('cringeText').value;
-      const link = document.getElementById('cringeLink').value;
+      const textArea = document.getElementById('cringeText');
+      const linkInput = document.getElementById('cringeLink');
       const imageInput = document.getElementById('cringeImage');
       const output = document.getElementById('output');
       output.innerHTML = '';
       output.style.opacity = 0;
+
+      const text = textArea.value;
+      const link = linkInput.value;
 
       if (text) {
         const el = document.createElement('div');
@@ -101,6 +104,11 @@
         alert('Вставь что-нибудь кринжовое сначала!');
         return;
       }
+
+      // Очищаем поля ввода
+      textArea.value = '';
+      linkInput.value = '';
+      imageInput.value = '';
 
       setTimeout(() => {
         output.style.opacity = 1;
