--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       height: 100vh;
       margin: 0;
       padding: 2rem;
+      overflow: hidden;
     }
     h1 {
       font-size: 2.5rem;
@@ -48,13 +49,38 @@
       font-size: 1.5rem;
       opacity: 0;
       transition: opacity 1s ease;
+      position: relative;
     }
     .destroyed {
-      animation: explode 0.8s forwards;
+      position: relative;
+      animation: explode 1.5s forwards, shake 0.5s ease-in-out;
     }
     @keyframes explode {
-      0% { transform: scale(1); opacity: 1; }
-      100% { transform: scale(3) rotate(720deg); opacity: 0; }
+      0% { transform: scale(1) rotate(0deg); opacity: 1; filter: brightness(1); }
+      50% { transform: scale(1.5) rotate(360deg); filter: brightness(2); }
+      100% { transform: scale(0) rotate(720deg); opacity: 0; filter: brightness(0); }
+    }
+    @keyframes shake {
+      0% { transform: translate(0, 0); }
+      20% { transform: translate(-5px, 5px); }
+      40% { transform: translate(5px, -5px); }
+      60% { transform: translate(-5px, 5px); }
+      80% { transform: translate(5px, -5px); }
+      100% { transform: translate(0, 0); }
+    }
+    .flash {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: radial-gradient(white, rgba(255,255,255,0));
+      opacity: 0;
+      animation: flashEffect 0.4s ease-in-out;
+      pointer-events: none;
+      z-index: 100;
+    }
+    @keyframes flashEffect {
+      0% { opacity: 1; }
+      100% { opacity: 0; }
     }
   </style>
 </head>
@@ -65,6 +91,7 @@
   <input type="file" id="cringeImage" accept="image/*">
   <button onclick="destroyCringe()">АННИГИЛИРОВАТЬ</button>
   <div id="output"></div>
+  <div id="flashContainer"></div>
 
   <script>
     function destroyCringe() {
@@ -72,11 +99,18 @@
       const linkInput = document.getElementById('cringeLink');
       const imageInput = document.getElementById('cringeImage');
       const output = document.getElementById('output');
+      const flashContainer = document.getElementById('flashContainer');
       output.innerHTML = '';
       output.style.opacity = 0;
 
       const text = textArea.value;
       const link = linkInput.value;
+
+      // Вспышка эффекта
+      const flash = document.createElement('div');
+      flash.classList.add('flash');
+      flashContainer.appendChild(flash);
+      setTimeout(() => flash.remove(), 500);
 
       if (text) {
         const el = document.createElement('div');
@@ -116,7 +150,7 @@
 
       setTimeout(() => {
         output.innerHTML = '<p>✅ Кринж уничтожен. Ты свободен.</p>';
-      }, 1500);
+      }, 2000);
     }
   </script>
 </body>
