--- a/index.html
+++ b/index.html
@@ -53,20 +53,26 @@
     }
     .destroyed {
       position: relative;
-      animation: explode 1.5s forwards, shake 0.5s ease-in-out;
+      animation: explode 2.5s forwards, shake 1.5s ease-in-out;
     }
     @keyframes explode {
       0% { transform: scale(1) rotate(0deg); opacity: 1; filter: brightness(1); }
-      50% { transform: scale(1.5) rotate(360deg); filter: brightness(2); }
+      25% { transform: scale(1.2) rotate(180deg); filter: brightness(2); }
+      50% { transform: scale(1.5) rotate(360deg); filter: brightness(3); }
+      75% { transform: scale(2) rotate(540deg); filter: brightness(1.5); }
       100% { transform: scale(0) rotate(720deg); opacity: 0; filter: brightness(0); }
     }
     @keyframes shake {
-      0% { transform: translate(0, 0); }
-      20% { transform: translate(-5px, 5px); }
-      40% { transform: translate(5px, -5px); }
-      60% { transform: translate(-5px, 5px); }
-      80% { transform: translate(5px, -5px); }
-      100% { transform: translate(0, 0); }
+      0%, 100% { transform: translate(0, 0); }
+      10% { transform: translate(-10px, 10px); }
+      20% { transform: translate(10px, -10px); }
+      30% { transform: translate(-10px, 10px); }
+      40% { transform: translate(10px, -10px); }
+      50% { transform: translate(-10px, 10px); }
+      60% { transform: translate(10px, -10px); }
+      70% { transform: translate(-10px, 10px); }
+      80% { transform: translate(10px, -10px); }
+      90% { transform: translate(-10px, 10px); }
     }
     .flash {
       position: fixed;
@@ -150,7 +156,7 @@
 
       setTimeout(() => {
         output.innerHTML = '<p>✅ Кринж уничтожен. Ты свободен.</p>';
-      }, 2000);
+      }, 3000);
     }
   </script>
 </body>
