--- a/index.html
+++ b/index.html
@@ -100,23 +100,36 @@
   <div id="flashContainer"></div>
 
   <script>
+    function triggerFlash(times, interval = 300) {
+      let count = 0;
+      const flashContainer = document.getElementById('flashContainer');
+
+      const intervalId = setInterval(() => {
+        const flash = document.createElement('div');
+        flash.classList.add('flash');
+        flashContainer.appendChild(flash);
+        setTimeout(() => flash.remove(), 400);
+
+        count++;
+        if (count >= times) {
+          clearInterval(intervalId);
+        }
+      }, interval);
+    }
+
     function destroyCringe() {
       const textArea = document.getElementById('cringeText');
       const linkInput = document.getElementById('cringeLink');
       const imageInput = document.getElementById('cringeImage');
       const output = document.getElementById('output');
-      const flashContainer = document.getElementById('flashContainer');
       output.innerHTML = '';
       output.style.opacity = 0;
 
       const text = textArea.value;
       const link = linkInput.value;
 
-      // Вспышка эффекта
-      const flash = document.createElement('div');
-      flash.classList.add('flash');
-      flashContainer.appendChild(flash);
-      setTimeout(() => flash.remove(), 500);
+      // Тройная вспышка
+      triggerFlash(3);
 
       if (text) {
         const el = document.createElement('div');
