--- a/index.html
+++ b/index.html
@@ -75,6 +75,19 @@
       position: relative;
       animation: explode 2.5s forwards, shake 1.5s ease-in-out;
     }
+    .flash {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      opacity: 0;
+      pointer-events: none;
+      z-index: 100;
+    }
+    .flash.sad { background: radial-gradient(#66ccff, rgba(102,204,255,0)); animation: flashEffect 0.4s ease-in-out; }
+    .flash.angry { background: radial-gradient(#ff3300, rgba(255,51,0,0)); animation: flashEffect 0.4s ease-in-out; }
+    .flash.scared { background: radial-gradient(#cc66ff, rgba(204,102,255,0)); animation: flashEffect 0.4s ease-in-out; }
+    .flash.disgusted { background: radial-gradient(#66ff66, rgba(102,255,102,0)); animation: flashEffect 0.4s ease-in-out; }
+
     @keyframes explode {
       0% { transform: scale(1) rotate(0deg); opacity: 1; filter: brightness(1); }
       25% { transform: scale(1.2) rotate(180deg); filter: brightness(2); }
@@ -93,16 +106,6 @@
       70% { transform: translate(-10px, 10px); }
       80% { transform: translate(10px, -10px); }
       90% { transform: translate(-10px, 10px); }
-    }
-    .flash {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: radial-gradient(white, rgba(255,255,255,0));
-      opacity: 0;
-      animation: flashEffect 0.4s ease-in-out;
-      pointer-events: none;
-      z-index: 100;
     }
     @keyframes flashEffect {
       0% { opacity: 1; }
@@ -127,13 +130,13 @@
   <audio id="boomSound" src="boom.mp3" preload="auto"></audio>
 
   <script>
-    function triggerFlash(times, interval = 300) {
+    function triggerFlash(emotion, times = 3, interval = 300) {
       let count = 0;
       const flashContainer = document.getElementById('flashContainer');
 
       const intervalId = setInterval(() => {
         const flash = document.createElement('div');
-        flash.classList.add('flash');
+        flash.classList.add('flash', emotion);
         flashContainer.appendChild(flash);
         setTimeout(() => flash.remove(), 400);
 
@@ -163,8 +166,8 @@
         return;
       }
 
-      // Тройная вспышка и звук
-      triggerFlash(3);
+      // Эффекты и звук в зависимости от эмоции
+      triggerFlash(emotion);
       sound.currentTime = 0;
       sound.play();
 
@@ -208,7 +211,6 @@
         reader.readAsDataURL(imageInput.files[0]);
       }
 
-      // Очищаем поля ввода
       textArea.value = '';
       linkInput.value = '';
       imageInput.value = '';
