--- a/index.html
+++ b/index.html
@@ -73,7 +73,54 @@
     }
     .destroyed {
       position: relative;
-      animation: explode 2.5s forwards, shake 1.5s ease-in-out;
+    }
+    .explode-sad {
+      animation: explode-sad 2.5s forwards, shake 1.5s ease-in-out;
+    }
+    .explode-angry {
+      animation: explode-angry 2.5s forwards, shake 1.5s ease-in-out;
+    }
+    .explode-scared {
+      animation: explode-scared 2.5s forwards, shake 1.5s ease-in-out;
+    }
+    .explode-disgusted {
+      animation: explode-disgusted 2.5s forwards, shake 1.5s ease-in-out;
+    }
+
+    @keyframes explode-sad {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(0.9) rotate(90deg); opacity: 0.5; }
+      100% { transform: scale(0) rotate(180deg); opacity: 0; }
+    }
+    @keyframes explode-angry {
+      0% { transform: scale(1); opacity: 1; filter: brightness(1); }
+      30% { transform: scale(1.5) rotate(45deg); filter: brightness(3); }
+      100% { transform: scale(0) rotate(720deg); opacity: 0; filter: brightness(0); }
+    }
+    @keyframes explode-scared {
+      0% { transform: scale(1); opacity: 1; }
+      25% { transform: scale(0.8) translateX(-20px); }
+      50% { transform: scale(1.2) translateX(20px); }
+      75% { transform: scale(0.6) translateX(-10px); }
+      100% { transform: scale(0) translateX(0); opacity: 0; }
+    }
+    @keyframes explode-disgusted {
+      0% { transform: scale(1) rotate(0deg); opacity: 1; filter: hue-rotate(0deg); }
+      50% { transform: scale(1.4) rotate(90deg); filter: hue-rotate(90deg); }
+      100% { transform: scale(0) rotate(180deg); opacity: 0; filter: hue-rotate(180deg); }
+    }
+
+    @keyframes shake {
+      0%, 100% { transform: translate(0, 0); }
+      10% { transform: translate(-10px, 10px); }
+      20% { transform: translate(10px, -10px); }
+      30% { transform: translate(-10px, 10px); }
+      40% { transform: translate(10px, -10px); }
+      50% { transform: translate(-10px, 10px); }
+      60% { transform: translate(10px, -10px); }
+      70% { transform: translate(-10px, 10px); }
+      80% { transform: translate(10px, -10px); }
+      90% { transform: translate(-10px, 10px); }
     }
     .flash {
       position: fixed;
@@ -88,25 +135,6 @@
     .flash.scared { background: radial-gradient(#cc66ff, rgba(204,102,255,0)); animation: flashEffect 0.4s ease-in-out; }
     .flash.disgusted { background: radial-gradient(#66ff66, rgba(102,255,102,0)); animation: flashEffect 0.4s ease-in-out; }
 
-    @keyframes explode {
-      0% { transform: scale(1) rotate(0deg); opacity: 1; filter: brightness(1); }
-      25% { transform: scale(1.2) rotate(180deg); filter: brightness(2); }
-      50% { transform: scale(1.5) rotate(360deg); filter: brightness(3); }
-      75% { transform: scale(2) rotate(540deg); filter: brightness(1.5); }
-      100% { transform: scale(0) rotate(720deg); opacity: 0; filter: brightness(0); }
-    }
-    @keyframes shake {
-      0%, 100% { transform: translate(0, 0); }
-      10% { transform: translate(-10px, 10px); }
-      20% { transform: translate(10px, -10px); }
-      30% { transform: translate(-10px, 10px); }
-      40% { transform: translate(10px, -10px); }
-      50% { transform: translate(-10px, 10px); }
-      60% { transform: translate(10px, -10px); }
-      70% { transform: translate(-10px, 10px); }
-      80% { transform: translate(10px, -10px); }
-      90% { transform: translate(-10px, 10px); }
-    }
     @keyframes flashEffect {
       0% { opacity: 1; }
       100% { opacity: 0; }
@@ -166,7 +194,6 @@
         return;
       }
 
-      // Эффекты и звук в зависимости от эмоции
       triggerFlash(emotion);
       sound.currentTime = 0;
       sound.play();
@@ -187,28 +214,31 @@
           break;
       }
 
+      let el;
       if (text) {
-        const el = document.createElement('div');
+        el = document.createElement('div');
         el.textContent = text;
-        el.classList.add('destroyed');
-        output.appendChild(el);
       } else if (link) {
-        const el = document.createElement('a');
+        el = document.createElement('a');
         el.href = link;
         el.textContent = link;
         el.target = '_blank';
-        el.classList.add('destroyed');
-        output.appendChild(el);
       } else if (hasImage) {
         const reader = new FileReader();
         reader.onload = function (e) {
           const img = document.createElement('img');
           img.src = e.target.result;
           img.style.maxWidth = '300px';
-          img.classList.add('destroyed');
+          img.classList.add(`explode-${emotion}`);
           output.appendChild(img);
         }
         reader.readAsDataURL(imageInput.files[0]);
+        return;
+      }
+
+      if (el) {
+        el.classList.add(`explode-${emotion}`);
+        output.appendChild(el);
       }
 
       textArea.value = '';
