--- a/index.html
+++ b/index.html
@@ -88,26 +88,27 @@
     }
 
     @keyframes explode-sad {
-      0% { transform: scale(1); opacity: 1; }
-      50% { transform: scale(0.9) rotate(90deg); opacity: 0.5; }
-      100% { transform: scale(0) rotate(180deg); opacity: 0; }
+      0% { transform: translateY(0) scale(1); opacity: 1; filter: blur(0); }
+      50% { transform: translateY(30px) scale(0.8); opacity: 0.5; filter: blur(2px); }
+      100% { transform: translateY(100px) scale(0.5); opacity: 0; filter: blur(5px); }
     }
     @keyframes explode-angry {
       0% { transform: scale(1); opacity: 1; filter: brightness(1); }
-      30% { transform: scale(1.5) rotate(45deg); filter: brightness(3); }
-      100% { transform: scale(0) rotate(720deg); opacity: 0; filter: brightness(0); }
+      30% { transform: scale(1.5) rotate(10deg); filter: brightness(3) drop-shadow(0 0 10px red); }
+      70% { transform: scale(1.2) rotate(-10deg); }
+      100% { transform: scale(0); opacity: 0; filter: brightness(0); }
     }
     @keyframes explode-scared {
       0% { transform: scale(1); opacity: 1; }
-      25% { transform: scale(0.8) translateX(-20px); }
-      50% { transform: scale(1.2) translateX(20px); }
-      75% { transform: scale(0.6) translateX(-10px); }
-      100% { transform: scale(0) translateX(0); opacity: 0; }
+      25% { transform: scale(1.2) translateX(-40px); }
+      50% { transform: scale(1.5) translateX(40px); }
+      75% { transform: scale(0.8) translateX(-20px); }
+      100% { transform: scale(0); opacity: 0; }
     }
     @keyframes explode-disgusted {
-      0% { transform: scale(1) rotate(0deg); opacity: 1; filter: hue-rotate(0deg); }
-      50% { transform: scale(1.4) rotate(90deg); filter: hue-rotate(90deg); }
-      100% { transform: scale(0) rotate(180deg); opacity: 0; filter: hue-rotate(180deg); }
+      0% { transform: rotate(0deg) scale(1); filter: hue-rotate(0deg); opacity: 1; }
+      50% { transform: rotate(180deg) scale(1.3); filter: hue-rotate(90deg) saturate(2); }
+      100% { transform: rotate(720deg) scale(0); filter: hue-rotate(180deg); opacity: 0; }
     }
 
     @keyframes shake {
