--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cringe Destroyer</title>
   <style>
     body {
@@ -110,7 +110,6 @@
       50% { transform: rotate(180deg) scale(1.3); filter: hue-rotate(90deg) saturate(2); }
       100% { transform: rotate(720deg) scale(0); filter: hue-rotate(180deg); opacity: 0; }
     }
-
     @keyframes shake {
       0%, 100% { transform: translate(0, 0); }
       10% { transform: translate(-10px, 10px); }
@@ -139,6 +138,31 @@
     @keyframes flashEffect {
       0% { opacity: 1; }
       100% { opacity: 0; }
+    }
+
+    @media (max-width: 600px) {
+      body {
+        padding: 1rem;
+      }
+      h1 {
+        font-size: 1.8rem;
+        text-align: center;
+      }
+      textarea, input[type="url"], input[type="file"], select, button {
+        font-size: 1rem;
+        padding: 0.8rem;
+      }
+      input[type="file"]::file-selector-button {
+        padding: 0.4rem 0.8rem;
+      }
+      #output {
+        font-size: 1.2rem;
+        text-align: center;
+      }
+      button {
+        width: 100%;
+        max-width: 500px;
+      }
     }
   </style>
 </head>
@@ -201,18 +225,10 @@
 
       let message = '';
       switch (emotion) {
-        case 'sad':
-          message = '💔 Кринж разорвал душу, но ты справился.';
-          break;
-        case 'angry':
-          message = '🔥 Злость выплеснута. Кринж уничтожен.';
-          break;
-        case 'scared':
-          message = '😰 Ты посмотрел страху в глаза и стер его.';
-          break;
-        case 'disgusted':
-          message = '🧼 Отвращение устранено. Чистота восстановлена.';
-          break;
+        case 'sad': message = '💔 Кринж разорвал душу, но ты справился.'; break;
+        case 'angry': message = '🔥 Злость выплеснута. Кринж уничтожен.'; break;
+        case 'scared': message = '😰 Ты посмотрел страху в глаза и стер его.'; break;
+        case 'disgusted': message = '🧼 Отвращение устранено. Чистота восстановлена.'; break;
       }
 
       let el;
