--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       border-radius: 8px;
       cursor: pointer;
       transition: background 0.3s ease;
+      margin-bottom: 1rem;
     }
     button:hover {
       background: darkred;
@@ -86,7 +87,9 @@
     .explode-disgusted {
       animation: explode-disgusted 2.5s forwards, shake 1.5s ease-in-out;
     }
-
+    .destroy-all {
+      animation: destroy-all 3s forwards;
+    }
     @keyframes explode-sad {
       0% { transform: translateY(0) scale(1); opacity: 1; filter: blur(0); }
       50% { transform: translateY(30px) scale(0.8); opacity: 0.5; filter: blur(2px); }
@@ -110,36 +113,11 @@
       50% { transform: rotate(180deg) scale(1.3); filter: hue-rotate(90deg) saturate(2); }
       100% { transform: rotate(720deg) scale(0); filter: hue-rotate(180deg); opacity: 0; }
     }
-    @keyframes shake {
-      0%, 100% { transform: translate(0, 0); }
-      10% { transform: translate(-10px, 10px); }
-      20% { transform: translate(10px, -10px); }
-      30% { transform: translate(-10px, 10px); }
-      40% { transform: translate(10px, -10px); }
-      50% { transform: translate(-10px, 10px); }
-      60% { transform: translate(10px, -10px); }
-      70% { transform: translate(-10px, 10px); }
-      80% { transform: translate(10px, -10px); }
-      90% { transform: translate(-10px, 10px); }
+    @keyframes destroy-all {
+      0% { transform: scale(1); opacity: 1; filter: grayscale(0); }
+      50% { transform: scale(1.5); filter: grayscale(1); }
+      100% { transform: scale(0); opacity: 0; filter: grayscale(1); }
     }
-    .flash {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      opacity: 0;
-      pointer-events: none;
-      z-index: 100;
-    }
-    .flash.sad { background: radial-gradient(#66ccff, rgba(102,204,255,0)); animation: flashEffect 0.4s ease-in-out; }
-    .flash.angry { background: radial-gradient(#ff3300, rgba(255,51,0,0)); animation: flashEffect 0.4s ease-in-out; }
-    .flash.scared { background: radial-gradient(#cc66ff, rgba(204,102,255,0)); animation: flashEffect 0.4s ease-in-out; }
-    .flash.disgusted { background: radial-gradient(#66ff66, rgba(102,255,102,0)); animation: flashEffect 0.4s ease-in-out; }
-
-    @keyframes flashEffect {
-      0% { opacity: 1; }
-      100% { opacity: 0; }
-    }
-
     @media (max-width: 600px) {
       body {
         padding: 1rem;
@@ -178,97 +156,20 @@
     <option value="disgusted">🤢 Отвращение</option>
   </select>
   <button onclick="destroyCringe()">АННИГИЛИРОВАТЬ</button>
+  <button onclick="destroyEverything()" style="background: black; color: lime;">🧨 УНИЧТОЖИТЬ ВСЁ</button>
   <div id="output"></div>
   <div id="flashContainer"></div>
   <audio id="boomSound" src="boom.mp3" preload="auto"></audio>
 
   <script>
-    function triggerFlash(emotion, times = 3, interval = 300) {
-      let count = 0;
-      const flashContainer = document.getElementById('flashContainer');
-
-      const intervalId = setInterval(() => {
-        const flash = document.createElement('div');
-        flash.classList.add('flash', emotion);
-        flashContainer.appendChild(flash);
-        setTimeout(() => flash.remove(), 400);
-
-        count++;
-        if (count >= times) {
-          clearInterval(intervalId);
-        }
-      }, interval);
-    }
-
-    function destroyCringe() {
-      const textArea = document.getElementById('cringeText');
-      const linkInput = document.getElementById('cringeLink');
-      const imageInput = document.getElementById('cringeImage');
-      const emotion = document.getElementById('emotion').value;
-      const output = document.getElementById('output');
-      const sound = document.getElementById('boomSound');
-      output.innerHTML = '';
-      output.style.opacity = 0;
-
-      const text = textArea.value;
-      const link = linkInput.value;
-      const hasImage = imageInput.files.length > 0;
-
-      if (!text && !link && !hasImage) {
-        alert('Вставь что-нибудь кринжовое сначала!');
-        return;
-      }
-
-      triggerFlash(emotion);
-      sound.currentTime = 0;
-      sound.play();
-
-      let message = '';
-      switch (emotion) {
-        case 'sad': message = '💔 Кринж разорвал душу, но ты справился.'; break;
-        case 'angry': message = '🔥 Злость выплеснута. Кринж уничтожен.'; break;
-        case 'scared': message = '😰 Ты посмотрел страху в глаза и стер его.'; break;
-        case 'disgusted': message = '🧼 Отвращение устранено. Чистота восстановлена.'; break;
-      }
-
-      let el;
-      if (text) {
-        el = document.createElement('div');
-        el.textContent = text;
-      } else if (link) {
-        el = document.createElement('a');
-        el.href = link;
-        el.textContent = link;
-        el.target = '_blank';
-      } else if (hasImage) {
-        const reader = new FileReader();
-        reader.onload = function (e) {
-          const img = document.createElement('img');
-          img.src = e.target.result;
-          img.style.maxWidth = '300px';
-          img.classList.add(`explode-${emotion}`);
-          output.appendChild(img);
-        }
-        reader.readAsDataURL(imageInput.files[0]);
-        return;
-      }
-
-      if (el) {
-        el.classList.add(`explode-${emotion}`);
-        output.appendChild(el);
-      }
-
-      textArea.value = '';
-      linkInput.value = '';
-      imageInput.value = '';
-
-      setTimeout(() => {
-        output.style.opacity = 1;
-      }, 100);
-
-      setTimeout(() => {
-        output.innerHTML = `<p>✅ ${message}</p>`;
-      }, 3000);
+    function destroyEverything() {
+      const elements = document.querySelectorAll('textarea, input, select, button');
+      elements.forEach(el => {
+        el.classList.add('destroy-all');
+        el.disabled = true;
+      });
+      document.body.style.background = '#000';
+      document.getElementById('output').innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">💣 Всё очищено. Наступила тишина.</p>';
     }
   </script>
 </body>
