--- a/index.html
+++ b/index.html
@@ -5,7 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Cringe Destroyer</title>
   <style>
-    /* ... все стили остаются как есть ... */
+    body {
+      font-family: Arial, sans-serif;
+      background: #121212;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      margin: 0;
+      padding: 2rem;
+      overflow: hidden;
+    }
+    h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    textarea, input[type="url"], select, input[type="file"] {
+      width: 100%;
+      max-width: 500px;
+      padding: 1rem;
+      font-size: 1rem;
+      margin-bottom: 1rem;
+      border: none;
+      border-radius: 8px;
+    }
+    input[type="file"] {
+      background-color: #1e1e1e;
+      color: #ccc;
+      border: 2px dashed #444;
+    }
+    input[type="file"]::file-selector-button {
+      background-color: #333;
+      color: #fff;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button {
+      background: red;
+      border: none;
+      color: white;
+      padding: 1rem 2rem;
+      font-size: 1.2rem;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      margin-bottom: 1rem;
+    }
+    button:hover {
+      background: darkred;
+    }
+    #output {
+      margin-top: 2rem;
+      font-size: 1.5rem;
+      opacity: 0;
+      transition: opacity 1s ease;
+      position: relative;
+    }
+    .destroy-all {
+      animation: destroy-all 5s forwards;
+    }
     .final-flash {
       position: fixed;
       top: 0;
@@ -16,6 +78,11 @@
       opacity: 0;
       animation: finalFlashAnim 0.6s ease-in-out forwards;
       z-index: 9999;
+    }
+    @keyframes destroy-all {
+      0% { transform: scale(1); opacity: 1; filter: grayscale(0); }
+      50% { transform: scale(2); filter: grayscale(1); }
+      100% { transform: scale(0); opacity: 0; filter: grayscale(1); }
     }
     @keyframes finalFlashAnim {
       0% { opacity: 0; }
