--- a/index.html
+++ b/index.html
@@ -79,6 +79,33 @@
       animation: finalFlashAnim 0.6s ease-in-out forwards;
       z-index: 9999;
     }
+    #nuke-button-wrapper {
+      position: fixed;
+      bottom: 20px;
+      left: 20px;
+      z-index: 999;
+    }
+    #nuke-button, #confirm-nuke-button {
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+      background-color: red;
+      color: white;
+      font-weight: bold;
+      border: 3px solid white;
+      font-size: 1.5rem;
+    }
+    #confirm-nuke-button {
+      border-radius: 8px;
+      width: auto;
+      height: auto;
+      padding: 1rem 1.5rem;
+      background: black;
+      color: lime;
+      font-size: 1rem;
+      display: none;
+      margin-top: 0.5rem;
+    }
     @keyframes destroy-all {
       0% { transform: scale(1); opacity: 1; filter: grayscale(0); }
       50% { transform: scale(2); filter: grayscale(1); }
@@ -103,12 +130,20 @@
     <option value="disgusted">🤢 Отвращение</option>
   </select>
   <button onclick="destroyCringe()">АННИГИЛИРОВАТЬ</button>
-  <button onclick="destroyEverything()" style="background: black; color: lime;">🧨 УНИЧТОЖИТЬ ВСЁ</button>
   <div id="output"></div>
   <div id="flashContainer"></div>
+  <div id="nuke-button-wrapper">
+    <button id="nuke-button" onclick="revealConfirmButton()">💣</button>
+    <button id="confirm-nuke-button" onclick="destroyEverything()">УНИЧТОЖИТЬ ВСЁ</button>
+  </div>
   <audio id="boomSound" src="boom.mp3" preload="auto"></audio>
 
   <script>
+    function revealConfirmButton() {
+      document.getElementById('nuke-button').style.display = 'none';
+      document.getElementById('confirm-nuke-button').style.display = 'block';
+    }
+
     function destroyEverything() {
       const elements = document.querySelectorAll('textarea, input, select, button, #pageTitle');
       elements.forEach(el => {
