--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
     #nuke-button-wrapper {
       position: fixed;
       bottom: 20px;
-      left: 20px;
+      right: 20px;
       z-index: 999;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
     }
     #nuke-button, #confirm-nuke-button {
       width: 80px;
@@ -142,6 +145,65 @@
     function revealConfirmButton() {
       document.getElementById('nuke-button').style.display = 'none';
       document.getElementById('confirm-nuke-button').style.display = 'block';
+    }
+
+    function destroyCringe() {
+      const textArea = document.getElementById('cringeText');
+      const linkInput = document.getElementById('cringeLink');
+      const imageInput = document.getElementById('cringeImage');
+      const emotion = document.getElementById('emotion').value;
+      const output = document.getElementById('output');
+      const sound = document.getElementById('boomSound');
+      output.innerHTML = '';
+      output.style.opacity = 0;
+
+      const text = textArea.value;
+      const link = linkInput.value;
+      const hasImage = imageInput.files.length > 0;
+
+      if (!text && !link && !hasImage) {
+        alert('Вставь что-нибудь кринжовое сначала!');
+        return;
+      }
+
+      sound.currentTime = 0;
+      sound.play();
+
+      if (text) {
+        const el = document.createElement('div');
+        el.textContent = text;
+        el.classList.add('destroy-all');
+        output.appendChild(el);
+      } else if (link) {
+        const el = document.createElement('a');
+        el.href = link;
+        el.textContent = link;
+        el.target = '_blank';
+        el.classList.add('destroy-all');
+        output.appendChild(el);
+      } else if (hasImage) {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          const img = document.createElement('img');
+          img.src = e.target.result;
+          img.style.maxWidth = '300px';
+          img.classList.add('destroy-all');
+          output.appendChild(img);
+        }
+        reader.readAsDataURL(imageInput.files[0]);
+      }
+
+      textArea.value = '';
+      linkInput.value = '';
+      imageInput.value = '';
+
+      setTimeout(() => {
+        output.style.opacity = 1;
+      }, 100);
+
+      setTimeout(() => {
+        output.innerHTML = '<p>✅ Кринж уничтожен. Можешь выдохнуть.</p>';
+      }, 3000);
     }
 
     function destroyEverything() {
