--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         document.body.appendChild(flash);
       }, 2000);
       setTimeout(() => {
-        document.getElementById('output').innerHTML = '<p style="margin-top:2rem;font-size:1.5rem"> Всё очищено. Наступила тишина.</p>';
+        document.getElementById('output').innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">💣 Всё очищено. Наступила тишина.</p>';
       }, 2600);
     }
 
