--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
   </div>
   <audio id="boomSound" src="boom.mp3" preload="auto"></audio>
   <script>
+    let imageInput = document.getElementById('cringeImage');
     function triggerFlash(emotion, times = 3, interval = 300) {
       let count = 0;
       const flashContainer = document.getElementById('flashContainer');
@@ -231,7 +232,6 @@
     function destroyCringe() {
       const textArea = document.getElementById('cringeText');
       const linkInput = document.getElementById('cringeLink');
-      let imageInput = document.getElementById('cringeImage');
       const emotion = document.getElementById('emotion').value;
       const output = document.getElementById('output');
       const sound = document.getElementById('boomSound');
@@ -291,7 +291,8 @@
       newInput.id = 'cringeImage';
       newInput.name = oldInput.name;
       oldInput.parentNode.replaceChild(newInput, oldInput);
-      imageInput = newInput; // теперь работает
+      imageInput = newInput; // теперь работает, потому что глобальный let
+
 
       setTimeout(() => { output.style.opacity = 1; }, 100);
       setTimeout(() => {
