--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     function destroyCringe() {
       const textArea = document.getElementById('cringeText');
       const linkInput = document.getElementById('cringeLink');
-      let imageInput = document.getElementById('cringeImage'); // let — чтобы обновлять
+      const imageInput = document.getElementById('cringeImage'); // let — чтобы обновлять
       const emotion = document.getElementById('emotion').value;
       const output = document.getElementById('output');
       const sound = document.getElementById('boomSound');
