--- a/index.html
+++ b/index.html
@@ -346,8 +346,11 @@
         document.body.appendChild(flash);
       }, 2000);
       setTimeout(() => {
-        document.getElementById('output').innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">💣 Всё очищено. Наступила тишина.</p>';
+        const output = document.getElementById('output');
+        output.style.opacity = 1;
+        output.innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">💣 Всё очищено. Наступила тишина.</p>';
       }, 2600);
+
     }
 
   </script>
