--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       setTimeout(() => {
         const output = document.getElementById('output');
         output.style.opacity = 1;
-        output.innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">💣 Всё очищено. Наступила тишина.</p>';
+        output.innerHTML = '<p style="margin-top:2rem;font-size:1.5rem">Всё очищено. Наступила тишина.</p>';
       }, 2600);
 
     }
