--- a/index.html
+++ b/index.html
@@ -439,8 +439,11 @@
       const centerX = holeRect.left + holeRect.width / 2;
       const centerY = holeRect.top + holeRect.height / 2;
     
-      const elements = [...document.querySelectorAll('textarea, input, select, button, #pageTitle')]
-        .filter(el => !['nuke-button', 'confirm-nuke-button'].includes(el.id));
+      const elements = [
+        ...document.querySelectorAll('textarea, input, select, button, #pageTitle, label, #output, #output *')
+      ].filter(el => el.id !== 'nuke-button');
+
+
       elements.forEach(el => {
         const rect = el.getBoundingClientRect();
         const dx = centerX - (rect.left + rect.width / 2);
