--- a/index.html
+++ b/index.html
@@ -484,10 +484,9 @@
 
 
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gif.js.optimized/dist/gif.js"></script>
   <script>
     GIF = window.GIF;
-    GIF.prototype.workerScript = "https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js";
   </script>
 
   
